crates/tokmd-format/tests/snapshots/format_snapshots__diff_md_no_change.snap
---
source: crates/tokmd-format/tests/format_snapshots.rs
assertion_line: 365
expression: md
---
## Diff: same → same

### Summary

|Metric|From|To|Delta|Change|
|---|---:|---:|---:|---:|
|LOC|0|0|0|+0.0%|
|Lines|0|0|0|+0.0%|
|Files|0|0|0|+0.0%|
|Bytes|0|0|0|+0.0%|
|Tokens|0|0|0|+0.0%|

### Language Movement

|Type|Count|
|---|---:|
|Changed|0|
|Added|0|
|Removed|0|
|Modified|0|

### Language Breakdown

|Language|Old LOC|New LOC|Delta|
|---|---:|---:|---:|
|**Total**|0|0|0|
