crates/tokmd-format/tests/snapshots/format_snapshots__diff_md_shrinking.snap
---
source: crates/tokmd-format/tests/format_snapshots.rs
assertion_line: 355
expression: md
---
## Diff: v2.0.0 → v3.0.0

### Summary

|Metric|From|To|Delta|Change|
|---|---:|---:|---:|---:|
|LOC|3000|1500|-1500|-50.0%|
|Lines|3600|1800|-1800|-50.0%|
|Files|30|15|-15|-50.0%|
|Bytes|150000|75000|-75000|-50.0%|
|Tokens|7500|3750|-3750|-50.0%|

### Language Movement

|Type|Count|
|---|---:|
|Changed|2|
|Added|0|
|Removed|1|
|Modified|1|

### Language Breakdown

|Language|Old LOC|New LOC|Delta|
|---|---:|---:|---:|
|Python|1000|0|-1000|
|Rust|2000|1500|-500|
|**Total**|3000|1500|-1500|
